Started customizing page

--- a/c-intro.html
+++ b/c-intro.html
@@ -1,6 +1,6 @@
 ---
 layout: base
-title: "The Technical Writing Monkey"
+title: "A Guide to the Basics of Libre Office 4.3"
 ---
 
 <article data-hd-class="concept">
