--- a/t-installing.html
+++ b/t-installing.html
@@ -17,19 +17,19 @@ title: "How to download and install LibreOffice 4.3"
 
 <li>Click "Download Now" on the home page to be taken to the download page. <em>(Figure 1)</em></li>
 <figure>
-  <img src="libre_homepage.png" />
+  <img src="images/libre_homepage.PNG" />
   <figcaption>Figure 1: LibreOffice.org Home Page</figcaption>
 </figure>
 
 <li>Click "Download Version 4.3.0" to begin the download. <em>(Figure 2)</em></li>
 <figure>
-  <img src="libre_download.png" />
+  <img src="images/libre_download.PNG" />
   <figcaption>Figure 2: LibreOffice.org Download Page</figcaption>
 </figure>
 
 <li>The installer should begin downloading. If it does not, click on "LibreOffice_4.3.0_Win_x86.msi" to begin the download. <em>(Figure 3)</em></li>
 <figure>
-  <img src="libre_download2.png" />
+  <img src="images/libre_download2.PNG" />
   <figcaption>Figure 3: LibreOffice.org Download Confirmation Page</figcaption>
 </figure>
 
@@ -37,25 +37,25 @@ title: "How to download and install LibreOffice 4.3"
 
 <li>A pop-up may appear with a security warning. If it does, click "Run" to proceed. <em>(Figure 4)</em> </li>
 <figure>
-  <img src="libre_security.png" />
+  <img src="images/libre_security.PNG" />
   <figcaption>Figure 4: Windows Security Pop-up</figcaption>
 </figure>
 
 <li>The Installation Wizard will now step you through the installation process. Click "Next" to proceed. <em>(Figure 5)</em> </li>
 <figure>
-  <img src="libre_installer.png" />
+  <img src="images/libre_installer.PNG" />
   <figcaption>Figure 5: LibreOffice Installation Wizard</figcaption>
 </figure>
 
 <li>The wizard will give you the options to install with a Typical or Custom Setup. For most users, the Typical Setup will be sufficient. Click "Next" to proceed. <em>(Figure 6)</em> </li>
 <figure>
-  <img src="libre_installertypes.png" />
+  <img src="images/libre_installertypes.PNG" />
   <figcaption>Figure 6: LibreOffice Installation Types</figcaption>
 </figure>
 
 <li>Click "Install" to begin the installation. <em>(Figure 7)</em> </li>
 <figure>
-  <img src="libre_installer3.png" />
+  <img src="images/libre_installer3.PNG" />
   <figcaption>Figure 7: LibreOffice Installation Wizard</figcaption>
 </figure>
 
