--- a/t-installing.html
+++ b/t-installing.html
@@ -6,11 +6,11 @@ title: "How to download and install LibreOffice 4.3"
 <h1>{{ page.title }}</h1> 
 <p>A setup guide to downloading and installing LibreOffice 4.3</p> 
 <section data-hd-class="task/context"> 
-<h3>Context</h3>
+<h3>Disclaimer</h3>
 <p>This guide is meant for users of Windows 7, other versions of Windows may not follow the exact process described</p> 
 </section> 
 <section data-hd-class="task/steps-informal"> 
-<h2>Download and Installation Instructions</h2>
+<h2>Steps</h2>
 <ol> 
 
 <li>Go to <a href="http://www.libreoffice.org/"> http://www.libreoffice.org/ </a></li> 
