--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ title: "A Guide to the Basics of Libre Office 4.3"
 
 <article data-hd-class="concept">
 <h1>{{ page.title }}</h1>
-<p>Welcome to {{ site.name }}. Please use the navigation bar to browse the site.
-	
-</p>
+<p>Welcome to {{ site.name }}. </p>
+<p></p>
+<p>Please use the navigation bar to browse the site.</p>
 
 </article>
