--- a/t-impress.html
+++ b/t-impress.html
@@ -7,18 +7,18 @@ title: "How to create an Impress Presentation using LibreOffice 4.3"
 <p>A guide to create a presentation using LibreOffice Impress.</p> 
 <section data-hd-class="task/context"> 
 <h3>Disclaimer</h3>
-<p>This guide is meant for users of Windows 7, other versions of Windows may not follow the exact process described</p> 
+<p><em>This guide is meant for users of Windows 7, other versions of Windows may not follow the exact process described.</em></p> 
 </section> 
 <section data-hd-class="task/steps-informal"> 
 <h2>Steps</h2>
 <ol> 
 
-<li>Go to <a href="http://www.libreoffice.org/"> http://www.libreoffice.org/ </a></li> 
+<li>Open Libre Office using either the desktop icon or the Start menu.</li> 
 <p>
-<li>Click "Download Now" on the home page to be taken to the download page. <em>(Figure 1)</em></li>
+<li>Click "Impress Presentation" under "Create" in the launch window. <em>(Figure 1)</em></li>
 <figure>
-  <img src="images/libre_homepage.PNG" />
-  <figcaption>Figure 1: LibreOffice.org Home Page</figcaption>
+  <img src="images/libre_launchimpress.PNG" />
+  <figcaption>Figure 1: Libre Office Launch Window</figcaption>
 </figure>
 
 </ol> 
