--- a/t-installing.html
+++ b/t-installing.html
@@ -7,7 +7,7 @@ title: "How to download and install LibreOffice 4.3"
 <p>A setup guide to downloading and installing LibreOffice 4.3</p> 
 <section data-hd-class="task/context"> 
 <h3>Disclaimer</h3>
-<p>This guide is meant for users of Windows 7, other versions of Windows may not follow the exact process described</p> 
+<p><em>This guide is meant for users of Windows 7, other versions of Windows may not follow the exact process described.</em></p> 
 </section> 
 <section data-hd-class="task/steps-informal"> 
 <h2>Steps</h2>
