--- a/t-impress.html
+++ b/t-impress.html
@@ -1,6 +1,6 @@
 ---
 layout: base
-title: "How to create an Impress Presentation using LibreOffice 4.3"
+title: "How to create an Impress Presentation"
 ---
 <article data-hd-class="task"> 
 <h1>{{ page.title }}</h1> 
