--- a/t-writer.html
+++ b/t-writer.html
@@ -1,6 +1,6 @@
 ---
 layout: base
-title: "How to create a Writer Document using LibreOffice 4.3"
+title: "How to create a Writer Document"
 ---
 <article data-hd-class="task"> 
 <h1>{{ page.title }}</h1> 
