--- a/t-calc.html
+++ b/t-calc.html
@@ -1,6 +1,6 @@
 ---
 layout: base
-title: "How to create a Calc Spreadsheet using LibreOffice 4.3"
+title: "How to create a Calc Spreadsheet"
 ---
 <article data-hd-class="task"> 
 <h1>{{ page.title }}</h1> 
