--- a/c-compare.html
+++ b/c-compare.html
@@ -1,11 +1,11 @@
 ---
 layout: base
-title: "Libre Office vs. Microsoft Office"
+title: "Libre Office, an alternative to Microsoft Office"
 ---
 
 <article data-hd-class="concept">
 <h1>{{ page.title }}</h1>
-<p>A comparison of two powerfull software suites.</p>
+<p></p>
 
 
 <section data-hd-class="concept/example">
