--- a/c-compare.html
+++ b/c-compare.html
@@ -1,6 +1,6 @@
 ---
 layout: base
-title: "Libre Office, an alternative to Microsoft Office"
+title: "Libre Office, an MS Office Alternative"
 ---
 
 <article data-hd-class="concept">
