--- a/t-writer.html
+++ b/t-writer.html
@@ -15,6 +15,7 @@ title: "How to create a Writer Document"
 
 <li>Open Libre Office using either the desktop icon or the Start menu.</li> 
 <p>
+
 <li>Click "Writer Document" under "Create" in the launch window. <em>(Figure 1)</em></li>
 <figure>
   <img src="images/libre_launchwrite.PNG" />
@@ -22,6 +23,35 @@ title: "How to create a Writer Document"
 </figure>
 <p>
 
+<li>Type your letter as if it were MS Word.</li>
+<p>
+
+<li>Once you've written an amazing letter, save it using the "Save" button. <em>(Figure 2)</em></li>
+<figure>
+  <img src="images/writer_save.PNG" />
+  <figcaption>Figure 2: Writer "Save" Button</figcaption>
+</figure>
+<p>
+
+<li>Choose a good name and where you want to save it. <em>(Figure 3)</em></li>
+<figure>
+  <img src="images/writer_save2.PNG" />
+  <figcaption>Figure 3: Writer Save Window</figcaption>
+</figure>
+<p>
+
+<li>Choose a what file format you'd like save it as, Writer offers many options.<em>(Figure 4)</em></li>
+<figure>
+  <img src="images/writer_save3.PNG" />
+  <figcaption>Figure 4: Writer File Formats</figcaption>
+</figure>
+<p>
+
+<li>Click "Save" to finish saving your letter.</li>
+<p>
+
+<li>Exit the program as you would any other.</li>
+<p>
 
 </ol> 
 </section>
