--- a/t-writer.html
+++ b/t-writer.html
@@ -28,7 +28,7 @@ title: "How to create a Writer Document"
 
 <li>Once you've written an amazing letter, save it using the "Save" button. <em>(Figure 2)</em></li>
 <figure>
-  <img src="images/writer_save.PNG" />
+  <img src="images/writer_save.png" />
   <figcaption>Figure 2: Writer "Save" Button</figcaption>
 </figure>
 <p>
@@ -42,7 +42,7 @@ title: "How to create a Writer Document"
 
 <li>Choose a what file format you'd like save it as, Writer offers many options.<em>(Figure 4)</em></li>
 <figure>
-  <img src="images/writer_save3.PNG" />
+  <img src="images/writer_save3.png" />
   <figcaption>Figure 4: Writer File Formats</figcaption>
 </figure>
 <p>
