--- a/t-writer.html
+++ b/t-writer.html
@@ -40,7 +40,7 @@ title: "How to create a Writer Document"
 </figure>
 <p>
 
-<li>Choose a what file format you'd like save it as, Writer offers many options.<em>(Figure 4)</em></li>
+<li>Choose a what file format you'd like save it as; Writer offers many options.<em>(Figure 4)</em></li>
 <figure>
   <img src="images/writer_save3.png" />
   <figcaption>Figure 4: Writer File Formats</figcaption>
