--- a/t-calc.html
+++ b/t-calc.html
@@ -20,7 +20,37 @@ title: "How to create a Calc Spreadsheet"
   <img src="images/libre_launchcalc.PNG" />
   <figcaption>Figure 1: Libre Office Launch Window</figcaption>
 </figure>
+<p>
 
+<li>Enter your data and formulas as if it were MS Excel.</li>
+<p>
+
+<li>Once you've made good progress on your spreadsheet, save it using the "Save" button. <em>(Figure 2)</em></li>
+<figure>
+  <img src="images/calc_save.png" />
+  <figcaption>Figure 2: Calc "Save" Button</figcaption>
+</figure>
+<p>
+
+<li>Choose a good name and where you want to save it. <em>(Figure 3)</em></li>
+<figure>
+  <img src="images/calc_save2.PNG" />
+  <figcaption>Figure 3: Calc Save Window</figcaption>
+</figure>
+<p>
+
+<li>Choose a what file format you'd like save it as; Calc offers many options.<em>(Figure 4)</em></li>
+<figure>
+  <img src="images/writer_save3.png" />
+  <figcaption>Figure 4: Writer File Formats</figcaption>
+</figure>
+<p>
+
+<li>Click "Save" to finish saving your spreadsheet.</li>
+<p>
+
+<li>Exit the program as you would any other.</li>
+<p>
 </ol> 
 </section>
 </article>
