--- a/t-impress.html
+++ b/t-impress.html
@@ -20,6 +20,37 @@ title: "How to create an Impress Presentation"
   <img src="images/libre_launchimpress.PNG" />
   <figcaption>Figure 1: Libre Office Launch Window</figcaption>
 </figure>
+<p>
+
+<li>Create your slides similar to how you would in MS Power Point.</li>
+<p>
+
+<li>Once you've made good progress on your presentation, save it using the "Save" button. <em>(Figure 2)</em></li>
+<figure>
+  <img src="images/impress_save.png" />
+  <figcaption>Figure 2: Impress "Save" Button</figcaption>
+</figure>
+<p>
+
+<li>Choose a good name and where you want to save it. <em>(Figure 3)</em></li>
+<figure>
+  <img src="images/impress_save2.PNG" />
+  <figcaption>Figure 3: Impress Save Window</figcaption>
+</figure>
+<p>
+
+<li>Choose a what file format you'd like save it as; Impress offers many options.<em>(Figure 4)</em></li>
+<figure>
+  <img src="images/impress_save3.png" />
+  <figcaption>Figure 4: Impress File Formats</figcaption>
+</figure>
+<p>
+
+<li>Click "Save" to finish saving your presentation.</li>
+<p>
+
+<li>Exit the program as you would any other.</li>
+<p>
 
 </ol> 
 </section>
