--- a/c-compare.html
+++ b/c-compare.html
@@ -10,18 +10,24 @@ title: "LibreOffice, a MS Office Alternative"
 
 <section data-hd-class="concept/example">
 
+<p>To many people, the terms open source and free are associated with a lack of features and support. Fortunately, this is not the case with LibreOffice. Almost anything you can do with Microsoft Office, you can do with LibreOffice, and more!</p>
+<p>
+<p>Let's look at what's contained in LibreOffice:</p>
 <ul>
-<li>Bad breath</li>
-<li>Stinky feet</li>
-<li>Flatulence</li>
+<li>Writer, a full featured word processor, comparable to MS Word</li>
+<li>Calc, a spreadsheet program, comparable to MS Excel</li>
+<li>Impress, the presentation creator, comparable to MS Power Point</li>
+<li>Base, a powerful database front end, comparable to MS Access</li>
 </ul>
-
-<p>This is an image of the monkey being super stinky <em>(Figure 1)</em></p>
-
-<figure>
-  <img src="images/stinkymonkey.jpg" />
-  <figcaption>Figure 1: The technical writing monkey being super stinky</figcaption>
-</figure>
+<p>
+<p>LibreOffice also contains two more pieces of software that are not analogous to anything contained in MS Office:</p>
+<ul>
+<li>Draw, a drawing a flowchart application</li>
+<li>Math, an equation editor</li>
+</ul>
+<p>
+<p><a href="https://wiki.documentfoundation.org/Feature_Comparison:_LibreOffice_-_Microsoft_Office">For a full feature comparison between LibreOffice and Microsoft Office, click here.</a></p>
+<p>
+<p>In addition, LibreOffice is totally open source and free! There are even versions that can be run from a <a href="http://www.libreoffice.org/download/portable-versions/">USB drive</a> and don't have to be installed on the computer at all.</p>
 </section>
-
 </article>
